@@ -22,11 +22,9 @@ package org.apache.causeway.extensions.audittrail.applib.dom;
 
 import java.sql.Timestamp;
 import java.time.LocalDate;
-import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -72,14 +70,7 @@ public abstract class AuditTrailEntryRepositoryAbstract<E extends AuditTrailEntr
 
     @Override
     public Can<AuditTrailEntry> createForBulk(Can<EntityPropertyChange> entityPropertyChanges) {
-        Collection<AuditTrailEntry> auditTrailEntries = repositoryService.execInBulk(() -> entityPropertyChanges.stream()
-                .map(change -> {
-                    E entry = factoryService.detachedEntity(auditTrailEntryClass);
-                    entry.init(change);
-                    return repositoryService.persist(entry);
-                }).collect(Collectors.toList()), AuditTrailEntry.class
-        );
-        return Can.ofCollection(auditTrailEntries);
+        return Can.ofCollection(repositoryService.execInBulk(() -> entityPropertyChanges.map(this::createFor).toList()));
     }
 
     public Optional<AuditTrailEntry> findFirstByTarget(final Bookmark target) {
